--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.0",
-    "redux-thunk": "^2.2.0"
+    "react-timestamp": "^4.4.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "sort-by": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
